err/fc-thumbnail.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/fc_thumbnail-11.15.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sorl'...
Listing './lib/python3.5/site-packages/sorl/thumbnail'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/admin'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/conf'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/engines'...
Compiling './lib/python3.5/site-packages/sorl/thumbnail/helpers.py'...
***   File "./lib/python3.5/site-packages/sorl/thumbnail/helpers.py", line 55
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sorl/thumbnail/kvstores'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/management'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/management/commands'...
Compiling './lib/python3.5/site-packages/sorl/thumbnail/management/commands/thumbnail.py'...
***   File "./lib/python3.5/site-packages/sorl/thumbnail/management/commands/thumbnail.py", line 18
    print 'Cleanup thumbnails done.'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sorl/thumbnail/templatetags'...
Listing './share'...
Listing './share/python-wheels'...
